--- a/src/app.html
+++ b/src/app.html
@@ -22,46 +22,46 @@
 					<div class="content open f col">
 						<div class="items task f a row">
 							<input type="checkbox" id="li-1-1" name="li-1-1" />
-							<label for="li-1-1">List Item 1</label>
+							<span for="li-1-1">List Item 1</span>
 						</div>
 						<div class="items task f a row">
 							<input type="checkbox" id="li-1-2" name="li-1-2" />
-							<label for="li-1-2">List Item 2</label>
+							<span for="li-1-2">List Item 2</span>
 						</div>
 						<div class="items task f a row">
 							<input type="checkbox" id="li-1-3" name="li-1-3" />
-							<label for="li-1-3">List Item 3</label>
+							<span for="li-1-3">List Item 3</span>
 						</div>
 						<div class="items task f a row">
 							<input type="checkbox" id="li-1-4" name="li-1-4" />
-							<label for="li-1-4">List Item 4</label>
+							<span for="li-1-4">List Item 4</span>
 						</div>
 					</div>
 					<div class="add-task">
 						<img src="./assets/i/plus.svg" alt="plus icon" class="i" onclick="addTask(this)" />
 					</div>
 
-					<div class="content done f col" onclick="toggleDoneTasks(this)" data-toggle="closed">
-						<div class="toggle-header f a row">
+					<div class="content done f col" data-toggle="closed">
+						<div class="toggle-header f a row" onclick="toggleDoneTasks(this)">
 							<span>abgehakte </span>
 							<img src="./assets/i/expand-more.svg" alt="expand icon" class="i toggle-tasks-icon" />
 						</div>
 						<div class="items-cont-done">
 							<div class="items task f a row">
 								<input checked type="checkbox" id="li-1-5" name="li-1-5" />
-								<label for="li-1-5">List Item 5</label>
+								<span for="li-1-5">List Item 5</span>
 							</div>
 							<div class="items task f a row">
 								<input checked type="checkbox" id="li-1-6" name="li-1-6" />
-								<label for="li-1-6">List Item 6</label>
+								<span for="li-1-6">List Item 6</span>
 							</div>
 							<div class="items task f a row">
 								<input checked type="checkbox" id="li-1-7" name="li-1-7" />
-								<label for="li-1-7">List Item 7 </label>
+								<span for="li-1-7">List Item 7 </span>
 							</div>
 							<div class="items task f a row">
 								<input checked type="checkbox" id="li-1-8" name="li-1-8" />
-								<label for="li-1-8">List Item 8</label>
+								<span for="li-1-8">List Item 8</span>
 							</div>
 						</div>
 					</div>
