--- a/src/app.html
+++ b/src/app.html
@@ -19,24 +19,28 @@
 					<div class="header f a row">
 						<span class="list-title f20">Liste 1</span>
 					</div>
+
 					<div class="content open f col">
-						<div class="items task f a row">
-							<input type="checkbox" id="li-1-1" name="li-1-1" />
-							<span for="li-1-1">List Item 1</span>
-						</div>
-						<div class="items task f a row">
-							<input type="checkbox" id="li-1-2" name="li-1-2" />
-							<span for="li-1-2">List Item 2</span>
-						</div>
-						<div class="items task f a row">
-							<input type="checkbox" id="li-1-3" name="li-1-3" />
-							<span for="li-1-3">List Item 3</span>
-						</div>
-						<div class="items task f a row">
-							<input type="checkbox" id="li-1-4" name="li-1-4" />
-							<span for="li-1-4">List Item 4</span>
+						<div class="items-cont-open">
+							<div class="items task f a row">
+								<input type="checkbox" id="li-1-1" name="li-1-1" />
+								<span for="li-1-1">List Item 1</span>
+							</div>
+							<div class="items task f a row">
+								<input type="checkbox" id="li-1-2" name="li-1-2" />
+								<span for="li-1-2">List Item 2</span>
+							</div>
+							<div class="items task f a row">
+								<input type="checkbox" id="li-1-3" name="li-1-3" />
+								<span for="li-1-3">List Item 3</span>
+							</div>
+							<div class="items task f a row">
+								<input type="checkbox" id="li-1-4" name="li-1-4" />
+								<span for="li-1-4">List Item 4</span>
+							</div>
 						</div>
 					</div>
+
 					<div class="add-task">
 						<img src="./assets/i/plus.svg" alt="plus icon" class="i" onclick="addTask(this)" />
 					</div>
