--- a/src/public/app.html
+++ b/src/public/app.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./css/main.css" />
-		<link rel="stylesheet" href="./css/elements.css" />
-		<link rel="stylesheet" href="./css/app.css" />
-		<link rel="shortcut icon" href="./assets/favicon.svg" />
+		<link rel="stylesheet" href="../css/main.css" />
+		<link rel="stylesheet" href="../css/elements.css" />
+		<link rel="stylesheet" href="../css/app.css" />
+		<link rel="shortcut icon" href="../assets/favicon.svg" />
 		<title>Todo list | chraebsli.dev</title>
 	</head>
 
@@ -43,13 +43,13 @@
 						</div>
 
 						<div class="add-task">
-							<img src="./assets/i/plus.svg" alt="plus icon" class="i" onclick="addTask(this)" />
+							<img src="../assets/i/plus.svg" alt="plus icon" class="i" onclick="addTask(this)" />
 						</div>
 
 						<div class="content done f col" data-toggle="closed">
 							<div class="toggle-header f a row" onclick="toggleDoneTasks(this)">
 								<span>abgehakte </span>
-								<img src="./assets/i/expand-more.svg" alt="expand icon" class="i toggle-tasks-icon" />
+								<img src="../assets/i/expand-more.svg" alt="expand icon" class="i toggle-tasks-icon" />
 							</div>
 							<div class="items-cont-done">
 								<div class="items task f a row">
@@ -78,7 +78,7 @@
 		<footer id="footer"></footer>
 	</body>
 
-	<script src="./js/init.js"></script>
-	<script src="./js/elements.js"></script>
-	<script src="./js/app.js"></script>
+	<script src="../js/init.js"></script>
+	<script src="../js/elements.js"></script>
+	<script src="../js/app.js"></script>
 </html>
